networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shellshock-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: shellshock
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: <insert-my-ip>/32
    ports:
    - protocol: TCP
      port: 8080
